[package]
name = "crum_bls"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
bls12_381 = { workspace = true }
digest = { workspace = true }
ff = { workspace = true }
pairing = { workspace = true }
rand_core = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
